# ethereum-partitioning-experiments

./: .gitignore  CMakeLists.txt  LICENSE  METIS_methods.cpp  METIS_methods.h  Makefile  Makefile.common  Makefile.lib  README.md  buildGraph.cpp  config.conf  config.cpp  config.h  run_linux.sh  utils.cpp
buildGraph/: CMakeLists.txt  Makefile
buildGraph/include/: helpers.h
buildGraph/src/: buildGraph.cpp
cmake/: FindLIBMETIS.cmake
libMETIS/: Makefile
libMETIS/include/: HMETIS_methods.h  METIS_methods.h
libMETIS/src/: HMETIS_methods.cpp  METIS_methods.cpp
libcommon/: CMakeLists.txt  Makefile
libcommon/include/: config.h  statistics.h
libcommon/src/: config.cpp  statistics.cpp
libfuture/: CMakeLists.txt  Makefile
libfuture/include/: future_partitioning.h  part_graph_partitioning.h
libfuture/src/: future_partitioning.cpp  part_graph_partitioning.cpp
libpartitioning/: CMakeLists.txt  Makefile
libpartitioning/include/: HMETIS_partitioning.h  METIS_partitioning.h  fb_partitioning.h  fbpartitioning.h  file_partitioning.h  hash_partitioning.h  partitioner.h
libpartitioning/src/: HMETIS_partitioning.cpp  METIS_partitioning.cpp  fb_partitioning.cpp  fbpartitioning.cpp  file_partitioning.cpp  hash_partitioning.cpp  partitioner.cpp
libutils/: CMakeLists.txt  Makefile
libutils/include/: log.h  utils.h
libutils/src/: utils.cpp
scripts/: parse_graph.cpp  plotBars.py  plotBoxes.py  plotEdgeCutEvolution.py
test/: CMakeLists.txt  Makefile
test/src/fb_partitioning/: oracle_test.cpp  test_graph.txt
test/src/graph/: graph_test.cpp  partitioner_test.cpp
